# Kairo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bug_report.txt  cloudbuild.yaml  diagnose_atlas_tls.py  figma-design-spec.md  manage.py  package-lock.json  package.json  patch_pymongo_ssl.py  pyproject.toml  requirements.deploy.txt  requirements.txt  streamlit_app.py
.claude/: settings.json  settings.local.json
.streamlit/: config.toml  secrets-example.toml  secrets.toml
app/: __init__.py  app.py
app/app-generated/: prompt_20260614_224832.txt  prompt_20260614_231447.txt  prompt_20260614_231523.txt  prompt_20260614_231730.txt  prompt_20260614_231827.txt  prompt_20260614_231913.txt  prompt_20260614_232011.txt  (+33 more)
brain/: __init__.py  config.py  elasticsearch_manager.py
config/: config.py  dune_params.json
deploy/: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  QUICKSTART.md  docker-compose.yml
ingestion/: dune_index_manager.py  dune_pipeline.py  ingest.py  schedule_runner.py
kairo/: settings.py  urls.py  wsgi.py
kairo_design/: app.jsx  data.js  screen-config.jsx  screen-history.jsx  screen-morning.jsx  screen-narrative.jsx  styles.css
prompts/: gemini-code-1780225632730.txt
scripts/: purge.py
synthesize/: kairo_data.py  narrative_engine.py  narrative_tracker.py
templates/: admin_panel.html  login.html
utils/: check_connection.py  client_secret_360527997635-8qbgak9khs63pmrrfu3jec9qp8id26jm.apps.googleusercontent.com.json  example.py  setup_check.py  utils.py
web/: services.py  urls.py  views.py
(+220 files in other folders)
