[project]
name = "kairoagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Sneha Parihar"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
packages = [
    { include = "kairoagent" }
]

include = [
    "kairoagent/static/**/*"
]
dependencies = [
    "django (>=4.2,<5.0)",
    "gunicorn (>=21.0,<22.0)",
    "google-genai (>=2.6.0,<3.0.0)",
    "PyYAML (>=6.0.0,<7.0.0)",
    "elasticsearch (>=8.9.0,<9.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "plotly (>=5.0.0,<6.0.0)",
    "pymongo[srv] (>=4.10,<5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "certifi (>=2026.5.20,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
